# lorchestra

./: .env.example  .gitignore  .specwright.yaml  ARCH-GOAL-MINIMAL-EVENT-PIPELINE.md  ARCHITECTURE.md  BIGQUERY_QUICKSTART.md  CLAUDE.md  CONTRIBUTING.md  DO_THESE_3_STEPS.md  NEXT_STEPS.md  README.md  RESUME_SPEC.md  SETUP_INSTRUCTIONS.md  SETUP_NOW.md  continue-spec.md  pyproject.toml  repro_auth.py  requirements.txt
.aip_artifacts/AIP-lorchestra-2025-11-18-001/: manual-verification.md
.aip_artifacts/AIP-lorchestra-2025-11-24-001/: ACCEPTANCE_REPORT.md  acceptance_tests.py  apply_schema_changes.py  fix_object_type_nullable.py  integration-test-plan.md  show_latest_run.py  verify_integration.py  verify_schema.py
.canonizer/: .gitignore  config.yaml
.claude/: TASK.md  plan-e005-03-handlers.md
.github/: copilot-instructions.md
.specwright/aips/: authctl-migration.yaml  canonization-pipeline.yaml  canonize-1-to-n-fix.yaml  contact-events.yaml  dry-run-test-table.yaml  email-body-projection.yaml  email-canonization.yaml  event-client-refactor.yaml  final-form-processing-v2.yaml  final-form-processing.yaml  independent-package-config.yaml  ingestion-to-bq.yaml  lorch-adapter-refactor.yaml  lorchestra-stats-query.yaml  pipeline-composite-jobs.yaml  prod-ingest-dataverse.yaml  prod-ingestion-w-debug.yaml  projection-processor.yaml  projector-update-with-config-and-local-files-update.yaml  refactor-and-event_client-spec.yaml  rename-lorch-to-lorchestra.yaml  sheets-projector-job-p2-arch-fix.yaml  sheets-projector-job.yaml  slim-down-lorchestra.yaml  standardize-source-system-columns.yaml  storacle-and-sheets-v3.yaml  thin-runner-refactor.yaml
.specwright/epics/: e005b-command-plane.md
.specwright/specs/: authctl-migration.md  authctl-stack-client.md  canonical-data-cleanup.md  canonization-pipeline.md  canonize-1-to-n-fix.md  contact-events.md  dry-run-test-table.md  email-body-projection.md  email-canonization.md  event-client-refactor.md  final-form-processing-v2.md  final-form-processing.md  independent-package-config.md  ingestion-to-bq.md  lorchestra-stats-query.md  manual-raw-ingestion-spec.md  pipeline-composite-jobs.md  prod-google-forms-ingestion.md  prod-ingest-dataverse.md  prod-ingest-stripe.md  prod-ingestion-w-debug.md  projection-processor.md  projector-update-with-config-and-local-files-update.md  refactor-and-event_client-spec.md  rename-lorch-to-lorchestra.md  sheets-projector-job-p2-arch-fix.md  sheets-projector-job.md  slim-down-lorchestra.md  standardize-source-system-columns.md  storacle-and-sheets-v3.md  thin-runner-refactor.md
artifacts/migration/: ddl-event-log.sql  (+2 more)
config/: pipeline.yaml
docs/: DECISIONS.md  GMAIL_OAUTH_TROUBLESHOOTING.md  architecture.md  canonical-transforms.md  cloud-migration.md  configuration.md  gmail-config-fixes.md  jobs.md  projection-pipeline.md  sqlite-schema.md  time_based_extraction.md  transforms.md  vault.md  whats_next.md
lorch/: __init__.py  cli.py  config.py  pipeline.py  utils.py
lorchestra/: __init__.py  cli.py  compiler.py  config.py  errors.py  executor.py  idem_keys.py  injest_config.py  job_runner.py  jobs.py  pipeline.py  plan_builder.py  query_builder.py  registry.py  run_store.py  sql_runner.py  utils.py
scripts/: auto_setup.sh  backfill_validation_stamps.py  canonize_emails.py  cleanup_test_data.py  create_projections.sh  create_views.sh  daily_canonize.sh  daily_formation.sh  daily_ingest.sh  daily_local_projection.sh  daily_molt_projection.sh  daily_projection.sh  debug_bq_failures.py  fix_canonizer_meta.py  fix_corrupt_struct.py  migrate_registry_to_dots.py  nuclear_clean.py  query_events.py  recanonize_sessions.sh  refresh_gmail_oob.py  setup_bigquery.sh  smoke_equiv.py  verify_setup.py
setup/: README.md  bigquery-json-optimization.md  bigquery-setup.md  setup_bigquery.py  utils.py  verify_setup.py
specs/: e012-01-pipeline-parallelization.md  e012-02-formation-query-optimization.md  e012-03-performance-validation-observability.md
src/: __init__.py
tests/: conftest.py  test_boundaries.py  test_canonize_processor.py  test_cli_config.py  test_cli_jobs.py  test_cli_stats_query.py  test_compiler.py  test_config.py  test_cross_project_sync.py  test_dry_run.py  test_e2e_canonize_v2.py  test_errors.py  test_event_client.py  test_executor.py  test_final_form_processor.py  test_handlers.py  test_inferometer_callable.py  test_ingest_processor.py  test_integration.py  test_job_runner.py  test_jobs.py  test_molt_projection_sql.py  test_pipeline_composites.py  test_plan_builder.py  test_pm_acceptance.py  test_processors.py  test_projection_processor.py  test_query_builder.py  test_registry.py  test_schemas.py  test_sheets_projection_processor.py  test_sql_runner.py  test_test_table.py
(+375 files in other folders)
