[project]
name = "lorchestra"
version = "0.1.0"
description = "lorchestra: Local Orchestrator for PHI data pipeline (meltano → canonizer → vector-projector)"
authors = [{name = "Local Pipeline Team"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "google-cloud-bigquery>=3.0",
    "ingestor @ file:///workspace/ingestor",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
lorchestra = "lorchestra.cli:main"

[project.entry-points."lorchestra.jobs"]
gmail_ingest_acct1 = "lorchestra.jobs.ingest_gmail:job_ingest_gmail_acct1"
gmail_ingest_acct2 = "lorchestra.jobs.ingest_gmail:job_ingest_gmail_acct2"
gmail_ingest_acct3 = "lorchestra.jobs.ingest_gmail:job_ingest_gmail_acct3"
exchange_ingest_ben_mensio = "lorchestra.jobs.ingest_exchange:job_ingest_exchange_ben_mensio"
exchange_ingest_booking_mensio = "lorchestra.jobs.ingest_exchange:job_ingest_exchange_booking_mensio"
exchange_ingest_info_mensio = "lorchestra.jobs.ingest_exchange:job_ingest_exchange_info_mensio"
exchange_ingest_ben_efs = "lorchestra.jobs.ingest_exchange:job_ingest_exchange_ben_efs"
dataverse_ingest_contacts = "lorchestra.jobs.ingest_dataverse:job_ingest_dataverse_contacts"
dataverse_ingest_sessions = "lorchestra.jobs.ingest_dataverse:job_ingest_dataverse_sessions"
dataverse_ingest_reports = "lorchestra.jobs.ingest_dataverse:job_ingest_dataverse_reports"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lorchestra*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
