[project]
name = "lorchestra"
version = "0.1.0"
description = "lorchestra: Local Orchestrator for PHI data pipeline (meltano → canonizer → vector-projector)"
authors = [{name = "Local Pipeline Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "google-cloud-bigquery>=3.0",
    "jinja2>=3.0",
    "injest>=0.1.0",
    "authctl>=0.1.0",
    "canonizer>=0.1.0",
    "finalform>=0.1.0",
    "projectionist>=0.1.0",
    "storacle>=0.1.0",
    "egret>=0.1.0",
]

[tool.uv.sources]
injest = { path = "/workspace/injest", editable = true }
authctl = { path = "/workspace/authctl", editable = true }
canonizer = { path = "/workspace/canonizer", editable = true }
finalform = { path = "/workspace/finalform", editable = true }
projectionist = { path = "/workspace/projectionist", editable = true }
storacle = { path = "/workspace/storacle", editable = true }
egret = { path = "/workspace/egret", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
lorchestra = "lorchestra.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lorchestra*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
